# Opengl3xRenderTriangle

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cci/opengl3nativerender/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opengl_triangle_renderer.cpp
app/src/main/java/com/cci/opengl3nativerender/: GlTriangleRenderer.kt  MainActivity.kt  SingleThreadHandlerExecutor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cci/opengl3nativerender/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
